# design-patterns

./: main.py  makefile  pyproject.toml
app/: main.py
app/patterns/: factory.py  singleton.py  strategy.py
